<resources>
    <string name="app_name">Transport</string>
    <string name="title_traineesList">Trainees list</string>
    <string name="title_activitiesList">Activities list</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="label_newTrainee">New trainee</string>
    <string name="label_firstName">First name</string>
    <string name="label_surname">Surname</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_phoneNumber">Phone number</string>
    <string name="label_save">Save</string>
    <string name="msg_requiredFields">Fill in the required fields!</string>
    <string name="msg_saved">Save successful!</string>
    <string name="msg_required">Required</string>
    <string name="msg_error_api">API request failed!</string>
    <string name="msg_error_response">Response invalid!</string>
    <string name="label_cancel">Cancel</string>
    <string name="msg_delete_success">Delete successful!</string>
    <string name="label_login">Login</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_trainees">Trainees</string>
    <string name="label_travelOrders">Travel orders</string>
    <string name="label_employees">Employees</string>
    <string name="label_add_trainee">New trainee</string>
    <string name="label_add_activity">New activity</string>
    <string name="label_basic_info">Basic info</string>
    <string name="label_additional_info">Additional info</string>
    <string name="label_fitness_info">Fitness info</string>
    <string name="label_trial_date">Trial date</string>
    <string name="label_trial_trainer">Trial trainer</string>
    <string name="label_promotion">Promotion</string>
    <string name="label_trial_period">Trial period</string>
    <string name="label_receive_email_notifications">Email notifications</string>
    <string name="label_date_of_birth">Date of birth</string>
    <string name="label_gender">Gender</string>
    <string name="label_height">Height</string>
    <string name="label_language">Language</string>
    <string name="label_email">Email</string>
    <string name="label_org_unit">Center</string>
    <string name="label_current_trainer">Current trainer</string>
    <string name="label_active">Active</string>
    <string name="label_termination_reason">Termination reason</string>
    <string name="label_limitations">Limitations</string>
    <string name="label_found_us_method">How they found us</string>
    <string name="label_previous_experience">Previous experience</string>
    <string name="label_goal">Goal</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="label_search">Search</string>
    <string name="label_edit_trainee">Edit trainee</string>
    <string name="label_all">All</string>
    <string name="label_new_membership">New membership</string>
    <string name="label_new_measurement">New measurement</string>
    <string name="label_membership_expiry_date">Membership expiration</string>
    <string name="label_membership_date_from">Valid from</string>
    <string name="label_membership_date_to">Valid to</string>
    <string name="label_membership_name">Membership name</string>
    <string name="label_membership_type">Membership type</string>
    <string name="label_sessions_left">Sessions left</string>
    <string name="label_next_session_date">Next session</string>
    <string name="label_memberships">Memberships</string>
    <string name="label_measurements">Measurements</string>
    <string name="label_activities">Activities</string>
    <string name="label_trainee_info">Trainee info</string>
    <string name="label_membership_list">Membership list</string>
    <string name="label_appointments">Appointments</string>
    <string name="label_days_left_lc">days left</string>
    <string name="label_sessions_left_lc">sessions left</string>
    <string name="label_trainee">Trainee</string>
    <string name="label_trainer">Trainer</string>
    <string name="label_date">Date</string>
    <string name="label_starts">Starts</string>
    <string name="label_ends">Ends</string>
    <string name="label_recurrence">Recurrence</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_membership_info">Membership info</string>
    <string name="label_days_left">Days until expiry</string>
    <string name="label_description">Description</string>
    <string name="label_appointment_info">Appointment info</string>
    <string name="label_finished">Finished</string>
    <string name="label_edit_appointment">Edit appointment</string>
    <string name="label_new_appointment">New appointment</string>
    <string name="msg_no_recurrence">No recurrence</string>
    <string name="msg_no_description">No description</string>
    <string name="label_save_trial_trainee">Save trial</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_menu">Menu</string>
    <string name="label_membershipCard">Card</string>
    <string name="label_validFrom">Valid from</string>
    <string name="label_dateFrom">Date from</string>
    <string name="label_dateTo">Date to</string>
    <string name="label_validTo">Valid to</string>
    <string name="label_purchaseDate">Purchase date</string>
    <string name="label_daysValid">Days valid</string>
    <string name="label_numberOfAppointments">Number of appointments</string>
    <string name="label_paymentMethod">Method</string>
    <string name="label_paymentDate">Payment date</string>
    <string name="label_price">Price</string>
    <string name="label_currency">Currency</string>
    <string name="label_comment">Comment</string>
    <string name="label_select_date">Select date</string>
    <string name="label_select_time">Select time</string>
    <string name="label_settings">Settings</string>
    <string name="label_weekdays">Weekdays</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_monday">Monday</string>
    <string name="label_tuesday">Tuesday</string>
    <string name="label_wednesday">Wednesday</string>
    <string name="label_thursday">Thursday</string>
    <string name="label_friday">Friday</string>
    <string name="label_saturday">Saturday</string>
    <string name="label_sunday">Sunday</string>
    <string name="label_visits_org_units">Visits centers</string>
    <string name="label_add_trial_trainee">Trial trainee</string>
    <string name="label_trial_appointment">Trial appointment</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_add_recurrence">Add recurrence</string>
    <string name="label_delete">Delete</string>
    <string name="msg_long_press_delete">Long press to delete!</string>
    <string name="label_of_total">of</string>
    <string name="label_inactive">Inactive</string>
    <string name="label_available_sessions">Available sessions</string>
    <string name="label_progress">Progress</string>
    <string name="msg_not_implemented">Feature not yet implemented!</string>
    <string name="label_scheduled">Scheduled</string>
    <string name="label_logout">Logout</string>
    <string name="label_ScanPackages">Scan packages</string>
    <string name="label_PoolCar">Pool car</string>
    <string name="label_chargedVehicles">Charged vehicles</string>
    <string name="notifications">Notifications</string>
    <string name="label_markAllAsRead">Mark all as read</string>

</resources>