<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="trainee"
            type="com.programdoo.transport.data.models.dtos.trainees.SaveTraineeRequestModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/stepTabLayout"
            style="@style/TabLayout"
            app:tabIndicatorColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_basic_info" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_additional_info" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fitness_info" />
        </com.google.android.material.tabs.TabLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/ContainerMain"
            app:layout_constraintBottom_toTopOf="@+id/actionButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepTabLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ContainerItemVertical">

                <com.programdoo.transport.ui.views.ProgramInputField
                    android:id="@+id/ifFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_firstName"
                    android:inputType="text"
                    android:imeOptions="actionNext">
                </com.programdoo.transport.ui.views.ProgramInputField>

                <com.programdoo.transport.ui.views.ProgramInputField
                    android:id="@+id/ifSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_surname"
                    android:inputType="text"
                    android:imeOptions="actionNext">
                </com.programdoo.transport.ui.views.ProgramInputField>

                <com.programdoo.transport.ui.views.ProgramInputField
                    android:id="@+id/ifNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_nickname"
                    android:inputType="text"
                    android:imeOptions="actionNext">
                </com.programdoo.transport.ui.views.ProgramInputField>

                <com.programdoo.transport.ui.views.ProgramInputField
                    android:id="@+id/ifPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_phoneNumber"
                    android:inputType="phone"
                    android:imeOptions="actionNext">
                </com.programdoo.transport.ui.views.ProgramInputField>

                <com.programdoo.transport.ui.views.SelectDialog
                    android:id="@+id/selPromotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_promotion">
                </com.programdoo.transport.ui.views.SelectDialog>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/sTrialPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/label_trial_period"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BottomButtonBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView">

            <Button
                android:id="@+id/buttonCancel"
                style="@style/ProgramButton.Cancel"
                android:text="@string/label_cancel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonPrimary"
                app:layout_constraintHorizontal_chainStyle="spread_inside"/>

            <Button
                android:id="@+id/buttonPrimary"
                style="@style/ProgramButton.Primary"
                android:text="@string/label_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonCancel"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
