<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_margin="20dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <TextView
                android:id="@+id/tvMeasurements"
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/label_measurements"
                app:drawableTint="@color/primary"
                app:drawableTopCompat="@drawable/icon_menu_measurements"/>

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/label_progress"
                app:drawableTint="@color/primary"
                app:drawableTopCompat="@drawable/icon_menu_progress"/>

            <TextView
                android:id="@+id/tvAppointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/label_appointments"
                app:drawableTint="@color/primary"
                app:drawableTopCompat="@drawable/icon_menu_calendar"/>

            <TextView
                android:id="@+id/tvMemberships"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/label_memberships"
                app:drawableTint="@color/primary"
                app:drawableTopCompat="@drawable/icon_menu_membership_card"/>

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/label_settings"
                app:drawableTint="@color/primary"
                app:drawableTopCompat="@drawable/icon_menu_preferences"/>

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/label_logout"
                app:drawableTint="@color/primary"
                app:drawableTopCompat="@drawable/icon_menu_logout"/>
        </GridLayout>
    </ScrollView>
</LinearLayout>