<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/ContainerMain"
        app:layout_constraintBottom_toTopOf="@id/actionButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ContainerItemVertical">

            <com.programdoo.transport.ui.views.MultiSelectDialog
                android:id="@+id/mselWeekdays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_weekdays"
                android:imeOptions="actionNext">
            </com.programdoo.transport.ui.views.MultiSelectDialog>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.programdoo.transport.ui.views.ProgramInputField
                    android:id="@+id/ifRecurFrom"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_from"
                    android:paddingEnd="2dp">
                </com.programdoo.transport.ui.views.ProgramInputField>

                <com.programdoo.transport.ui.views.ProgramInputField
                    android:id="@+id/ifRecurTo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_to"
                    android:paddingStart="2dp">
                </com.programdoo.transport.ui.views.ProgramInputField>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BottomButtonBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/ProgramButton.Cancel"
            android:text="@string/label_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonSave"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <Button
            android:id="@+id/buttonSave"
            style="@style/ProgramButton.Primary"
            android:text="@string/label_save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>